# NLFEA-Kim

./: .gitignore  Bending1ElemenLinear.ipynb  Bending5ElemenLinear.ipynb  README.md  TwoElemen.ipynb  combHard1D.py  e2.7.py  e3.16.ipynb  e3.8.py  e3.9.py  example3.16.py  generatemesh.py  hardening.py  nlfea.py  nlfem.py  output.out  pyproject.toml  shapel.py
_deprecated/: nlfem_obs.py
examples/: Bending1ElemenLinear.ipynb  Bending5ElemenLinear.ipynb  TwoElemen.ipynb  Untitled-1.py  example3.16.py  example4.15.ipynb  example4.19.ipynb  example4.5.ipynb  output.out
examples/.spyproject/config/: workspace.ini
nlfem/: elastic.py  elastoplastic.py  finiteElastoplasticity.py  generatemesh.py  hardening.py  hyperelastic.py  mooney.py  nonlinear_static.py  one_tension_infinitesimal_elasoplastic.py  output.out  rotatedStress.py  shapefunctions.py  util.py
obs/: e2.3.py  e2.8.py  elast3d.py
