[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlfem"
version = "0.0.1"
authors = [
  { name="Ghanendra K Das", email="gdas31@gatech.edu" },
]
description = "Nonlinear static finite element package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gkdas2/NLFEA-Kim"